--- a/localisation/LegacyOfRome.csv
+++ b/localisation/LegacyOfRome.csv
@@ -4,13 +4,13 @@ eunuch_desc;此人已经被阉割成了一个宦官.;;;;;;;;;;x
 blinded;致盲;;;;;;;;;;x
 blinded_desc;这个人物已经被致盲而永久失明.;;;;;;;;;;x
 born_in_the_purple;紫衣贵族;;;;;;;;;;x
-born_in_the_purple_desc;这个角色生于紫室-字面意思就是'出生于紫色的房间'. 这是一个专属于在位皇帝或女皇降生于皇宫紫色寝宫的子女的荣誉. 他们的继承权要优先于父母登基以前就出生的兄长们.;;;;;;;;;;x
+born_in_the_purple_desc;这个角色生于紫室-字面意思就是'出生于紫色的房间'。这是一个专属于在位皇帝或女皇降生于皇宫紫色寝宫的子女的荣誉. 他们的继承权要优先于父母登基以前就出生的兄长们。;;;;;;;;;;x
 augustus;奥古斯都;;;;;;;;;;x
 augustus_desc;此人是重生的罗马帝国的现任统治者，理应得到符合其身份的尊重.;;;;;;;;;;x
 title_imperial_eunuch;大内侍;;;;;;;;;;x
-title_imperial_eunuch_desc;大内侍， "睡在皇帝身边的人"是一项著名的预留给忠诚和谨慎的宦官的宫廷职位..;;;;;;;;;;x
+title_imperial_eunuch_desc;大内侍， "睡在皇帝身边的人"是一项著名的预留给忠诚和谨慎的宦官的宫廷职位……;;;;;;;;;;x
 title_court_eunuch;宫廷宦官;;;;;;;;;;x
-title_court_eunuch_desc;宦官们在宫廷中发挥了许多有价值的作用，而且在有女性的场合也值得信任..;;;;;;;;;;x
+title_court_eunuch_desc;宦官们在宫廷中发挥了许多有价值的作用，而且在有女性的场合也值得信任……;;;;;;;;;;x
 vassal_castrate_decision;阉割[Root.GetTitledFirstName];;;;;;;;;;x
 vassal_castrate_decision_desc;若他是你的囚犯，你可以下令阉割§Y[Root.GetTitledFirstName]§!，让它变成宦官。随后他将被释放，但不能再生育或拥有土地头衔。一种十分严厉的惩罚。;;;;;;;;;;x
 vassal_blinding_decision;致盲 [Root.GetTitledFirstName];;;;;;;;;;x
@@ -26,27 +26,27 @@ EVTNAMELoR.1;叙利亚培勒舍蒂那行省;;;;;;;;;;x
 EVTDESCLoR.1;我们已经从野蛮人手中解放了古老的叙利亚培勒舍蒂那行省让它重归罗马帝国。一次盛大的凯旋仪式将为完成此次壮举的英雄们举行，他们的姓名与他们的功绩永垂青史！;;;;;;;;;;x
 EVTOPTALoR.1;帝国万岁！;;;;;;;;;;x
 EVTNAMELoR.2;埃古普托斯行省;;;;;;;;;;x
-EVTDESCLoR.2;埃及人民的黑暗时代已经过去，再次回归了罗马的统治。这片法老的土地同样是旧帝国的大好粮仓，并且它将在永世昌盛的罗马国家重新成为至关重要的基石..;;;;;;;;;;x
+EVTDESCLoR.2;埃及人民的黑暗时代已经过去，再次回归了罗马的统治。这片法老的土地同样是旧帝国的大好粮仓，并且它将在永世昌盛的罗马国家重新成为至关重要的基石……;;;;;;;;;;x
 EVTNAMELoR.3;昔兰尼加行省;;;;;;;;;;x
 EVTDESCLoR.3;昔兰尼加的公民们可以庆祝了，因为罗马法再一次屹立在这片贫瘠的土地上。文明世界目睹了又一个古罗马行省回归了这个最神圣的帝国的怀抱，愿它永离野蛮人残酷的魔掌。;;;;;;;;;;x
 EVTNAMELoR.4;阿非利加行省;;;;;;;;;;x
-EVTDESCLoR.4;[Root.GetTitledFirstName]的势力现已遍布前罗马的阿非利加行省，再次将其纳入帝国囊中.帝国军队正在行军通过古老的罗马宿敌迦太基城，历史必将重现..;;;;;;;;;;x
+EVTDESCLoR.4;[Root.GetTitledFirstName]的势力现已遍布前罗马的阿非利加行省，再次将其纳入帝国囊中.帝国军队正在行军通过古老的罗马宿敌迦太基城，历史必将重现……;;;;;;;;;;x
 EVTNAMELoR.5;伊利里库姆行省;;;;;;;;;;x
-EVTDESCLoR.5;曾经罗马行省伊利里库姆已经重归了它真正的主人手里，复兴的罗马帝国以亚得里亚海东海岸作为天然的屏障，未来这个重要的兵源地将会在夺回西方疆域的战争中展现它的价值...;;;;;;;;;;x
+EVTDESCLoR.5;曾经的罗马行省伊利里库姆已经重归了它真正的主人手里，复兴的罗马帝国以亚得里亚海东海岸作为天然的屏障，未来这个重要的兵源地将会在夺回西方疆域的战争中展现它的价值……;;;;;;;;;;x
 EVTNAMELoR.6;意大利亚行省;;;;;;;;;;x
-EVTDESCLoR.6;在西部帝国的陷落后，意大利第二次解放重归正统罗马人的统治--希望这次运势更佳. 伟大之都罗马已经在你的手中.当帝国旗帜在图拉真柱上在微风之中飘扬，甚至坚强的战士们都开始哭泣.;;;;;;;;;;x
+EVTDESCLoR.6;在西部帝国的陷落后，意大利第二次解放重归正统罗马人的统治--希望这次运势更佳. 伟大之都罗马已经在你的手中.当帝国旗帜在图拉真柱上在微风之中飘扬，甚至坚强的战士们都开始哭泣。;;;;;;;;;;x
 EVTNAMELoR.7;高卢行省;;;;;;;;;;x
-EVTDESCLoR.7;作为很长一段时间内罗马认为永远失去的省份，高卢已经臣服于[Root.GetTitle]并回归帝国的统治. 自千年以前凯撒发动战争，这片土地已经变化很多， 但将永不再遭受暴发户国王和伪帝的统治.;;;;;;;;;;x
+EVTDESCLoR.7;作为很长一段时间内罗马认为永远失去的省份，高卢已经臣服于[Root.GetTitle]并回归帝国的统治. 自千年以前凯撒发动战争，这片土地已经变化很多， 但将永不再遭受暴发户国王和伪帝的统治。;;;;;;;;;;x
 EVTNAMELoR.8;日耳曼尼亚行省;;;;;;;;;;x
-EVTDESCLoR.8;帝国的边界扩张超过了图拉真大帝曾有的疆域.日耳曼尼亚这一昔日帝国灭亡的罪魁祸首，现已获得了和平重归帝国的统治. 它将由真正的罗马帝国治理，而不是冒牌的帝国.;;;;;;;;;;x
+EVTDESCLoR.8;帝国的边界扩张超过了图拉真大帝曾有的疆域。日耳曼尼亚这一昔日帝国灭亡的罪魁祸首，现已获得了和平重归帝国的统治。它将由真正的罗马帝国治理，而不是冒牌的帝国。;;;;;;;;;;x
 EVTNAMELoR.9;不列颠尼亚行省;;;;;;;;;;x
-EVTDESCLoR.9;曾经5世纪的时候罗马守军丢盔卸甲放弃了不列颠尼亚.让布列塔尼人感到欣慰的是，在遭受了这么多世纪的黑暗年代后，罗马最终重新夺回了这岛.他们能够再次自认是帝国的臣民.;;;;;;;;;;x
+EVTDESCLoR.9;曾经5世纪的时候罗马守军丢盔卸甲放弃了不列颠尼亚.让布列塔尼人感到欣慰的是，在遭受了这么多世纪的黑暗年代后，罗马最终重新夺回了这岛.他们能够再次自认是帝国的臣民。;;;;;;;;;;x
 EVTNAMELoR.10;伊比利亚行省;;;;;;;;;;x
-EVTDESCLoR.10;罗马帝国的势力范围现在再度一路扩张到了旧伊比利亚全省. 这片土地已经深受穆斯林和天主教领主因边界冲突引起的不断纠纷的困扰，然而现在它最终明白罗马帝国统治下的和平解决了在这个半岛上的问题.;;;;;;;;;;x
+EVTDESCLoR.10;罗马帝国的势力范围现在再度一路扩张到了旧伊比利亚全省. 这片土地已经深受穆斯林和天主教领主因边界冲突引起的不断纠纷的困扰，然而现在它最终明白罗马帝国统治下的和平解决了在这个半岛上的问题。;;;;;;;;;;x
 EVTNAMELoR.11;毛里塔尼亚行省;;;;;;;;;;x
 EVTDESCLoR.11;伟大的贝利萨留将军在公元6世纪时从汪达尔人手中收回了部分毛里塔尼亚的土地，但最终又在阿拉伯人迅速向北非扩张的过程中丧失了。在被暴政压迫了数百年后，罗马人又重新收复了这片土地，它将会再次繁荣。;;;;;;;;;;x
 EVTNAMELoR.12;美索不达米亚行省;;;;;;;;;;x
-EVTDESCLoR.12;图拉真皇帝从帕提亚帝国手中征服了美索不达米亚，并让它成为罗马帝国的一个行省.但是继承者哈德良皇帝级年后放弃了它.现在幼发拉底河和底格里斯河再次处于罗马帝国的庇护之下，并且这一次它们可不会再失守.;;;;;;;;;;x
+EVTDESCLoR.12;图拉真皇帝从帕提亚帝国手中征服了美索不达米亚，并让它成为罗马帝国的一个行省.但是继承者哈德良皇帝级年后放弃了它.现在幼发拉底河和底格里斯河再次处于罗马帝国的庇护之下，并且这一次它们可不会再失守。;;;;;;;;;;x
 EVTNAMELoR.13;加勒多尼亚行省;;;;;;;;;;x
 EVTDESCLoR.13;罗马帝国现在的边界已经超越了古代哈德良长城和安东尼长城的废墟，囊括了整个加勒多尼亚。这块冷漠和无情的土地是一些特殊人的家乡，但是他们将会转变为勤劳文明的罗马公民。;;;;;;;;;;x
 EVTNAMELoR.14;希伯尼亚行省;;;;;;;;;;x
