--- a/localisation/v2_50.csv
+++ b/localisation/v2_50.csv
@@ -4,7 +4,7 @@ ERA_CHAR_NAME_144999;卡洛曼一世;;;;;;;;;;x
 ERA_CHAR_NAME_190347;伦巴底 德西德里乌斯;;;;;;;;;;x
 ERA_CHAR_NAME_73679;阿卜杜拉赫曼一世;;;;;;;;;;x
 ERA_CHAR_NAME_34002;曼苏尔;;;;;;;;;;x
-ERA_CHAR_NAME_74413;克利须那一世;;;;;;;;;;x
+ERA_CHAR_NAME_74413;奎师那一世;;;;;;;;;;x
 ERA_CHAR_NAME_163112;白衣哈夫丹;;;;;;;;;;x
 ERA_CHAR_NAME_40605;留里克;;;;;;;;;;x
 ERA_CHAR_NAME_90104;秃头查理;;;;;;;;;;x
@@ -26,7 +26,7 @@ ERA_CHAR_NAME_125501;成吉思汗;;;;;;;;;;x
 ERA_CHAR_NAME_454500;爱德华三世;;;;;;;;;;x
 ERA_CHAR_NAME_455500;腓力六世;;;;;;;;;;x
 ERA_CHAR_NAME_471500;卡齐米日大帝;;;;;;;;;;x
-ERA_CHAR_NAME_476500;土耳其 奥尔汗;;;;;;;;;;x
+ERA_CHAR_NAME_476500; 奥尔汗 奥斯曼;;;;;;;;;;x
 ERA_CHAR_NAME_480000;月即别可汗;;;;;;;;;;x
 ERA_CHAR_NAME_170258;穆罕默德 宾 图格鲁克;;;;;;;;;;x
 ERA_UMAYYAD_EMPIRE;倭马亚;;;;;;;;;;x
