--- a/localisation/India.csv
+++ b/localisation/India.csv
@@ -43,7 +43,7 @@ PROV1151;落湿曼那槃提;;;;;;;;;;x
 PROV1152;秣伽耆厘;;;;;;;;;;x
 PROV1153;憍提婆楼舍;;;;;;;;;;x
 PROV1154;摩揭陀;;;;;;;;;;x
-PROV1155;室利补梨;;;;;;;;;;x
+PROV1155;室梨城;;;;;;;;;;x
 PROV1156;憍陀罗迦曼陀罗;;;;;;;;;;x
 PROV1157;婆罗憍陀;;;;;;;;;;x
 PROV1158;毗陀罗;;;;;;;;;;x
@@ -942,7 +942,7 @@ b_bagalkot;巴加尔科特;;;;;;;;;;x
 c_srirangapatna;室利兰伽波多那;;;;;;;;;;x
 c_srirangapatna_adj;室利兰伽波多那;;;;;;;;;;x
 b_srirangapatna;室利兰伽波多那;;;;;;;;;;x
-b_shravanabelagola;圣白泽城;;;;;;;;;;x
+b_shravanabelagola;尸罗婆那白泽;;;;;;;;;;x
 b_periyapatna;佩里亚帕提纳;;;;;;;;;;x
 b_panasoge;波那索戈;;;;;;;;;;x
 b_nanjarayapattana;难加罗亚帕提塔纳;;;;;;;;;;x
@@ -1079,7 +1079,7 @@ b_gopakapattana;果婆迦跋多那;;;;;;;;;;x
 b_gheria;盖里亚;;;;;;;;;;x
 b_mathagram;马特卡罗姆;;;;;;;;;;x
 b_kapardikadvipa;加帕尔底加德波;;;;;;;;;;x
-b_chandrapur;钱德拉布尔;;;;;;;;;;x
+b_chandrapur;旃陀罗卜梨;;;;;;;;;;x
 b_chitrakul;赤特罗库尔;;;;;;;;;;x
 c_thana;檀那;;;;;;;;;;x
 c_thana_adj;檀那;;;;;;;;;;x
