--- a/localisation/ReapersDue.csv
+++ b/localisation/ReapersDue.csv
@@ -11,8 +11,8 @@ SM_MASTER_VOLUME;主音量;;;;;;;;;;x
 SM_MUSIC_VOLUME;音乐;;;;;;;;;;x
 SM_DEATH_SOUND;人物死亡音效;;;;;;;;;;x
 ReapersDLC;死神索命;;;;;;;;;;x
-release_tributary;释放附庸;;;;;;;;;;x
-release_tributary_desc;你可以选择不再保护向你效忠的附庸。这会降低你的威望，但你将能够再次攻打他们;;;;;;;;;;x
+release_tributary;释放朝贡国;;;;;;;;;;x
+release_tributary_desc;你可以选择不再保护你的朝贡国。这会降低你的威望，但你将能够再次攻打他们;;;;;;;;;;x
 employ_court_physician;雇佣宫廷医生;;;;;;;;;;x
 employ_court_physician_desc;下令派出信使寻找§Y宫廷医生§!的候选人。你或许不得不花费一些钱财来劝诱他们到你的宫廷。如果你已经有了一位§Y宫廷医生§!并且选择雇佣一个新的医生，那么原宫廷医生会辞去他或她的职务。;;;;;;;;;;x
 employ_court_physician_tooltip;让全国范围内都知道你在寻找宫廷医生的候选人。\n;;;;;;;;;;x
@@ -62,7 +62,7 @@ EVTOPTU_RIP_11053;一小瓶我的血？我没觉得有什么不妥！;;;;;;;;;;x
 EVTDESC_RIP_11053_HORSE_MD;当你在庭院里睡觉时，突然你被一阵马蹄声惊醒。你起身看见一个男人从马上下来向你鞠躬。他解释说他是一名久负盛名的宫廷医师，离开了自己的家乡，从远方行游至此，只为了侍奉你！不过你早已有了决定……;;;;;;;;;;x
 EVTOPTV_RIP_11053;那匹马真健壮！来我的宫廷！;;;;;;;;;;x
 3_year_physician_cooldown;每隔§Y3§!年才能寻访医生;;;;;;;;;;x
-educated_court_physician;是位受过训练的宫廷医生\n;;;;;;;;;;x
+educated_court_physician;是一个训练有素的宫廷医生\n;;;;;;;;;;x
 inaccessible_tooltip;不在躲藏或隔离状态\n;;;;;;;;;;x
 EVTOPTB39400;受诅咒的异教徒！;;;;;;;;;;x
 become_vaishya;变为吠舍种姓;;;;;;;;;;x
@@ -341,7 +341,7 @@ RULES_ACHIEVEMENTS_DISABLED;成就： §R关闭§!;;;;;;;;;;x
 GAME_RULES_WINDOW_TITLE;游戏规则;;;;;;;;;;x
 RULE_SHATTERED_RETREAT;溃退;;;;;;;;;;x
 RULE_AZTEC_INVASION;§B日落入侵：§!阿兹特克入侵;;;;;;;;;;x
-RULE_DEFENSIVE_PACTS;防御协定;;;;;;;;;;x
+RULE_DEFENSIVE_PACTS;共同防御协定;;;;;;;;;;x
 RULE_OPTION_ON;启用;;;;;;;;;;x
 RULE_OPTION_OFF;关闭;;;;;;;;;;x
 RULE_AZTEC_13TH;13世纪;;;;;;;;;;x
@@ -374,7 +374,7 @@ RULE_AZTEC_INVASION_HISTORICAL_DESC;阿兹特克入侵最早会在13世纪发生
 RULE_AZTEC_INVASION_RANDOM_DESC;阿兹特克入侵会在游戏开始后随机发生，但最早在游戏开始50年后。;;;;;;;;;;x
 RULE_AZTEC_INVASION_OFF_DESC;阿兹特克入侵将不会发生。;;;;;;;;;;x
 RULE_DEFENSIVE_PACTS_ON_DESC;人物可以加入防御协定以对抗极具威胁的势力。如果盟约内的一名成员遭到目标的进攻，其他成员将加入战争一同对抗。;;;;;;;;;;x
-RULE_DEFENSIVE_PACTS_OFF_DESC;人物将不能加入防御协定以对抗极具威胁的势力。这一般会使得游戏更为简单。;;;;;;;;;;x
+RULE_DEFENSIVE_PACTS_OFF_DESC;人物将不能加入共同防御协定以对抗极具威胁的势力。这一般会使得游戏更为简单。;;;;;;;;;;x
 RULE_GENDER_DEFAULT_DESC;各种性别法是否可选将与默认一致，一些特定的文化与信仰或许会允许或禁止某些性别法。与秘密会议'女性地位'相关的一系列法案都可用。;;;;;;;;;;x
 RULE_GENDER_HISTORICAL_DESC;各种性别法是否可选将与默认一致，一些特定的文化与信仰或许会允许或禁止某些性别法。与秘密会议'女性地位'相关的一系列法案都将关闭。;;;;;;;;;;x
 RULE_GENDER_ALL_DESC;游戏中，'女性地位'法将对所有人开启至最大，而与秘密会议'女性地位'相关的一系列法案对所有人都不可用。;;;;;;;;;;x
@@ -552,7 +552,7 @@ infection_death;因伤口感染;;;;;;;;;;x
 severely_injured;身受重伤;;;;;;;;;;x
 severely_injured_desc;这个角色伤重致残，生命垂危。如能伤愈，他将恢复健康，但已造成的伤害永远不能彻底治愈。;;;;;;;;;;x
 severely_injured_death;被[GetHerHis]重伤所压垮;;;;;;;;;;x
-mangled;撕裂;;;;;;;;;;x
+mangled;血肉模糊;;;;;;;;;;x
 mangled_desc;这个角色曾身受恐怖的重伤，而今拖着残破的身躯生活。;;;;;;;;;;x
 mangled_death;身体血肉模糊;;;;;;;;;;x
 maimed_effect_tooltip;§Y[This.GetBestName]§!将会§Y残废§!\n;;;;;;;;;;x
@@ -2200,7 +2200,7 @@ feeble_death;因虚弱体质;;;;;;;;;;x
 vsync;垂直同步;;;;;;;;;;x
 ADDHOLDING_EFFECT;增加$VAL|Y0$地产空格给$NAME|Y$;;;;;;;;;;x
 SET_TRUCE_EFFECT;在$CHAR|Y$和$TARGET|Y$之间执行停战协定直到$DATE|Y$。;;;;;;;;;;x
-GAME_BOOK;十字军之王II游戏书;;;;;;;;;;x
+GAME_BOOK;王国风云II游戏书;;;;;;;;;;x
 PURCHASE_GAME_BOOK;购买游戏书可获得独特内容;;;;;;;;;;x
 HEADER;$KEY|Y$\n;;;;;;;;;;x
 RULED_TOO_LONG_PENALTY;统治过久：$VAL|=+0$;;;;;;;;;;x
