--- a/localisation/v1_08.csv
+++ b/localisation/v1_08.csv
@@ -17,5 +17,5 @@ EVTOPTA9003;最好不要冒这个险...;;;;;;;;;;x
 EVTOPTB9003;哈! 这封信是一个绝望的表现.;;;;;;;;;;x
 EVTTOOLTIP9023;你送出了一封礼貌的请求书.;;;;;;;;;;x
 EVTDESC9027;尊敬的 [Root.GetTitle],\n\n你好！我不喜欢这个，但是为了国家的兴盛，我将会支持你所有的派系。不要让我后悔自己的决定。\n\n此致，\n[From.GetTitledName];;;;;;;;;;x
-DATA_COLLECTION_AGREEMENT;你愿意通过收集有关游戏习惯和可下载内容及MOD的受欢迎程度的资料来帮助我们完善王国风云II么？如果你同意，你对王国风云II的操作行为将会在你游戏时以不记名的形式发给P社. P社不会，也不能通过这些材料来获取使用者的私人信息.;;;;;;;;;;x
+DATA_COLLECTION_AGREEMENT;你愿意通过收集游戏习惯和可下载内容及MOD的受欢迎程度的数据来帮助我们改善王国风云II吗？如果你同意，有关王国风云II的匿名数据将会在你进行游戏时发给Paradox Interactive。Paradox Interactive不会也不能通过使用这些数据来获取用户的任何信息。;;;;;;;;;;x
 DATA_COLLECTION_TITLE;帮助我们改进王国风云II？;;;;;;;;;;x
