--- a/localisation/v1_09b.csv
+++ b/localisation/v1_09b.csv
@@ -43,8 +43,8 @@ religious_cb_succ_tip;§Y[Root.GetTitledFirstName]§!使得信奉[Root.GetPossPr
 ultimogeniture;幼子继承制;;;;;;;;;;x
 succ_ultimogeniture;幼子继承制;;;;;;;;;;x
 succ_ultimogeniture_desc;幼子继承制，此继承法与更为常见的长子继承制相对，幼子继承制规定由最幼子有继承权。;;;;;;;;;;x
-tanistry;凯尔特选举制;;;;;;;;;;x
-succ_tanistry;凯尔特选举制;;;;;;;;;;x
+tanistry;凯尔特选任法;;;;;;;;;;x
+succ_tanistry;凯尔特选任法;;;;;;;;;;x
 succ_tanistry_desc;凯尔特酋长选举制，领主以及比领主低一至二等级的封臣皆可提名继承人，即太子——太子是从领主的王朝的成员中选出来的。封臣们更愿意从家族的其他支系中选择年长者，尤其是宣称者。;;;;;;;;;;x
 title_tanist;太子;;;;;;;;;;x
 TRIGGER_ULTIMOGENITURE_HEIR;幼子继承制继承人;;;;;;;;;;x
