--- a/localisation/v2_20b.csv
+++ b/localisation/v2_20b.csv
@@ -100,7 +100,7 @@ EVTNAME20218;招募虔信者;;;;;;;;;;x
 EVTDESC20218;我成功的在 [Root.Location.GetName] 的人民中注入了宗教的狂热. [Root.Liege.Religion.GetRandomGodName]虔诚的勇士随时准备好对抗异教徒!;;;;;;;;;;x
 EVTOPTA20218;我的 [Root.Liege.PrimaryTitle.GetRulerTitle] 会高兴的!;;;;;;;;;;x
 EVTDESC20219;我的 [Root.GetLordSpiritualName] [From.GetTitledFirstName] 告诉了我 [From.GetPossPronoun] 努力获得了巨大的成功！人们的宗教热情被鼓动了起来。一小队狂热的战士已经聚集在了 [Root.Capital.Capital.GetName] 准备为我效命。现在我只需要去找些异教徒让他们发泄，不然这些士兵就会兴尽散去。;;;;;;;;;;x
-EVTOPTA20219;赞美[Root.Religion.GetRandomGodName]!;;;;;;;;;;x
+EVTOPTA20219;赞美[Root.Religion.GetRandomGodName]！;;;;;;;;;;x
 EVTDESC20220;[Root.GetLordSpiritualName]虔诚的勇士前来为 [Root.Religion.GetRandomGodName] 作战. 但我拒绝发起圣战的行为让他们鄙夷,纷纷散去.我在同宗里的名声受到了损害.;;;;;;;;;;x
 EVTOPTA20220;说好的耐心是美德呢!?;;;;;;;;;;x
 action_organize_raid;组织劫掠;;;;;;;;;;x
@@ -135,8 +135,8 @@ ERA_CHAR_INFO_457620;作为卡斯提尔和列昂的国王, 费德南是再征服
 ERA_CHAR_INFO_167219;汉萨联盟是由一群由吕贝克主导日耳曼城市所组成,取代维斯比成为在中世纪以及后来时代主导波罗的海贸易的商业力量.他们的办事处,"孔托", 遍布主要的贸易港口和城市, 西至伦敦,东至诺夫哥罗德. 最终联盟强大到了能直接挑战大国, 一个例子便是在14世纪,他们占领和洗劫了丹麦首都哥本哈根.;;;;;;;;;;x
 ERA_CHAR_INFO_212513;被同时代的人成为世间奇迹, 弗里德里希二世是神圣罗马帝国在中世纪最强大的皇帝之一. 他的统治常常伴随着与教廷的战争. 弗里德里希被绝罚过四次, 教宗额我略九世甚至指认他为敌基督. 他在第六次十字军运动中参与了少许战斗,但成功的商定了让基督徒控制耶路撒冷. 1250年,50岁的他的死伴随着同族的消亡,最终为霍亨斯陶芬王朝画上了句号.;;;;;;;;;;x
 ERA_CHAR_INFO_74656;Singhana II 作为一个强大的印度君主,把他的国度向东北南大幅的扩张. 作为科学和艺术的拥护者, 他在Singhanapur建立了天文学院.;;;;;;;;;;x
-ERA_CHAR_INFO_454500;爱德华三世从许多方面来说都是一个勇士. 1327年, 在他父亲的统治毁灭性的终结后他接过了王冠. 在爱德华的统治下, 英格兰跻身欧洲军事强国之列, 而他对法国王位的宣称,则最终引发了后世所称的百年战争. 在他五十年长久的统治下, 爱德华始终关注军事. 他指挥克雷西会战, 利用主要由长弓手构成的英国军队击败了军力占优的法国人.;;;;;;;;;;x
-ERA_CHAR_INFO_455500;幸运的菲利普是来自瓦卢瓦王朝的第一个法国国王. 在他的统治下,法国人见证了后世所称的百年战争. 即便被叫做幸运的菲利普, 历史上的他并没有什么好运气. 在克雷西会战时, 法国的军队几乎全数被英国人歼灭. 在他统治的晚期, 黑死病第一次出现在了法国. 全国三分之一的人口染上了这致命的疫病, 包括菲利普的王后乔安.;;;;;;;;;;x
+ERA_CHAR_INFO_454500;爱德华三世从许多方面来说都是一个勇士. 1327年, 在他父亲的统治毁灭性的终结后他接过了王冠. 在爱德华的统治下, 英格兰跻身欧洲军事强国之列, 而他对法国王位的宣称,则最终引发了后世所称的百年战争. 在他五十年长久的统治下, 爱德华始终关注军事. 他指挥克雷西会战, 利用主要由长弓手构成的英格兰军队击败了军力占优的法国人.;;;;;;;;;;x
+ERA_CHAR_INFO_455500;幸运的菲利普是来自瓦卢瓦王朝的第一个法国国王. 在他的统治下,法国人见证了后世所称的百年战争. 即便被叫做幸运的菲利普, 历史上的他并没有什么好运气. 在克雷西会战时, 法国的军队几乎全数被英格兰人歼灭. 在他统治的晚期, 黑死病第一次出现在了法国. 全国三分之一的人口染上了这致命的疫病, 包括菲利普的王后乔安.;;;;;;;;;;x
 ERA_CHAR_INFO_476500;乌尔汗, 作为奥斯曼王朝奠基者的奥斯曼一世之子, 在父亲死后继承了父业. 他最初提出与其兄第阿拉丁共治, 但阿拉丁拒绝,最终成为了乌尔汗手下的大维奇尔, 直到1332年.在乌尔汗的统治下, 奥斯曼,乘拜占庭帝国苦于内战时在安纳托利亚西北大幅扩张.;;;;;;;;;;x
 ERA_CHAR_INFO_480000;穆罕默德 月即别是金帐汗国在位时间最长的可汗，在他的治理下蒙古各国达到了权利的巅峰。早年月即别皈依了伊斯兰教，在他即位后他钦点伊斯兰教为国教。月即别还有容纳基督徒的美名，教宗若望十二世甚至给他写过亲笔信表达感谢。;;;;;;;;;;x
 ERA_CHAR_INFO_170258;穆罕默德而是是图格鲁克族长, 他在印度建立了一个广大的穆斯林帝国. 在他的统治下, 帝国起初掌握了在印度的临时统治, 但本意并非长久维持下去. 穆罕默德以冷酷无情出名, 他对帝国课以重税. 运作帝国的同时他还面临无数叛乱的挑战, 当他死时, 帝国几近分崩离析.;;;;;;;;;;x
@@ -290,11 +290,11 @@ donate_money_to_haruriyyah;捐赠 300¤ 给哈鲁里耶派;;;;;;;;;;x
 donate_money_to_haruriyyah_desc;我可以捐钱给哈鲁里耶派换取[Player.Religion.GetPietyName]和教士们终身的崇拜.;;;;;;;;;;x
 expelled_d_zun_warriors;驱逐太阳骑士;;;;;;;;;;x
 expelled_d_haruriyyah;驱逐哈鲁里耶派;;;;;;;;;;x
-EVTDESC_CM_4399;陛下, 您的慷慨捐献定会为人所知. 我和教士们都认您为朋友. 放心, 如果人间没有赏赐,您在天堂也会得到的.\n赞美 [Root.Religion.GetRandomGodName],\n\n[From.GetTitledFirstName];;;;;;;;;;x
-EVTOPTA_CM_4399;赞美 [Root.Religion.GetRandomGodName].;;;;;;;;;;x
+EVTDESC_CM_4399;陛下，您的慷慨捐献定会为人所知。我和教士们都视您为朋友。放心，如果人间没有赏赐，您在天堂也会得到的。\n赞美[Root.Religion.GetRandomGodName]，\n\n[From.GetTitledFirstName];;;;;;;;;;x
+EVTOPTA_CM_4399;赞美[Root.Religion.GetRandomGodName]。;;;;;;;;;;x
 OVERWRITE_HOLDING;在部落聚落之上建立新的领地;;;;;;;;;;x
 borrowed_from_haruriyyah;欠哈鲁里耶派 300¤;;;;;;;;;;x
-EVTDESC_CM_4303;愿安宁伴随您,最伟大的 [Root.GetTitledFirstName]. 如您所知, 我们组织需要领导者, 而鉴于您的负债, 我恳请您送您那高贵的儿子[FromFrom.GetFirstName]来我们这任事. 当然,这会让他丧失继承权. 真主保佑您,\n\n[From.GetTitledName];;;;;;;;;;x
+EVTDESC_CM_4303;愿安宁伴随您,最伟大的 [Root.GetTitledFirstName]. 如您所知, 我们组织需要领导者, 而鉴于您的负债, 我恳请您送您那高贵的儿子[FromFrom.GetFirstName]来我们这任事. 当然,这会让他丧失继承权. 安拉保佑您,\n\n[From.GetTitledName];;;;;;;;;;x
 EVTTITLE_CM_4309;哈鲁里耶派;;;;;;;;;;x
 EVTDESC_CM_4309;一个新的穆斯林教团成立了, 他们自认为是沿袭最古老的哈鲁里传统, 发誓保护穆斯林对抗不信者和各路多神教. 哈鲁里正是用毒剑刺杀阿里哈里发之人,认为阿里是伊斯兰教的毒瘤. 这个新晋组织宣誓要有着一样的勇气和信念对抗唯一信仰的敌人. 他们自称为"哈鲁里耶派";;;;;;;;;;x
 EVTOPTA_CM_4309;我多半有用他们的地方;;;;;;;;;;x
